fix white space beyond footer on taller screens

--- a/style.css
+++ b/style.css
@@ -10,8 +10,15 @@
   --w3-third-padding: 1rem;
  } 
 }
+body {
+  background-color: rgb(33, 150, 243);
+}
 a {
   text-decoration: none;
+}
+.rowsContainer {
+  background-color: rgb(255, 255, 255);
+  padding: 1px;
 }
 .firstRow {
   margin: var(--firstRow-margin);
